data/all_generated_tests/raw_wast_tests/unreachable_InvalidorInconsistentControlFlowGraph_1415.wast
;; 6. **Test Description:** Insert `unreachable` within a function, right before a block that contains `return` and additional code. This checks if the CFG ensures that trapped paths do not allow subsequent return instructions to execute erroneously.    - **Constraint:** Trap should halt function execution before return.    - **Relation to CFG:** Verifies function-level CFG termination and correctness.

(assert_invalid
  (module
    (func $test_func (result i32)
      (unreachable)
      (block (result i32)
        (return (i32.const 42))
        (i32.const 0)
      )
    )
  )
  "type mismatch"
)